tests/parse_only/errors/opcode1.src
.IPPcode21

DEFVAR GF@a
DFVAR
